kustomize/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: my-backend-service
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 8080
  selector:
    app: my-backend
