kustomize/ingress.yaml
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: my-backend-ingress
spec:
  rules:
    - host: localhost
      http:
        paths:
          - path: /my-backend/v1
            pathType: Prefix
            backend:
              service:
                name: my-backend-service
                port:
                  number: 80
  tls:
    - hosts:
      - localhost
      secretName: secret-tls
